--- a/tic-tac-toe_gui.ui
+++ b/tic-tac-toe_gui.ui
@@ -10,11 +10,26 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Tic-tac-toe</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="B0Button">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -27,7 +42,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="B1Button">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -40,7 +55,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="B2Button">
     <property name="geometry">
      <rect>
       <x>450</x>
@@ -53,7 +68,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="B3Button">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -66,7 +81,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="B5Button">
     <property name="geometry">
      <rect>
       <x>450</x>
@@ -79,7 +94,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="B4Button">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -92,7 +107,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_7">
+   <widget class="QPushButton" name="B6Button">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -105,7 +120,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_8">
+   <widget class="QPushButton" name="B8Button">
     <property name="geometry">
      <rect>
       <x>450</x>
@@ -118,7 +133,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_9">
+   <widget class="QPushButton" name="B7Button">
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -131,7 +146,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="TitleLabel">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -144,7 +159,7 @@
      <string>Tic-tac-toe</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="P1Textbox">
     <property name="geometry">
      <rect>
       <x>50</x>
@@ -154,7 +169,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="P1Label">
     <property name="geometry">
      <rect>
       <x>70</x>
@@ -167,7 +182,7 @@
      <string>Player 1</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="P2Label">
     <property name="geometry">
      <rect>
       <x>630</x>
@@ -180,7 +195,7 @@
      <string>Player 2</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_2">
+   <widget class="QLineEdit" name="P2Textbox">
     <property name="geometry">
      <rect>
       <x>610</x>
@@ -189,8 +204,11 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_10">
+   <widget class="QPushButton" name="SRButton">
     <property name="geometry">
      <rect>
       <x>340</x>
@@ -203,7 +221,7 @@
      <string>Start</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="RoundNum">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -216,7 +234,7 @@
      <string>Round: 1</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="P1Score">
     <property name="geometry">
      <rect>
       <x>90</x>
@@ -229,7 +247,7 @@
      <string>0 pts</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="P2Score">
     <property name="geometry">
      <rect>
       <x>650</x>
